--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.4",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-document-picker": "^4.3.0",
     "react-native-elements": "^3.1.0",
+    "react-native-file-viewer": "^2.1.4",
+    "react-native-read-sms": "^1.0.6",
     "react-native-swipeout": "^2.3.6",
     "react-native-url-preview": "^1.1.9",
     "react-native-web": "~0.13.12",
