--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-document-picker": "^4.3.0",
     "react-native-elements": "^3.1.0",
     "react-native-file-viewer": "^2.1.4",
+    "react-native-profile-picture": "^1.0.0",
     "react-native-read-sms": "^1.0.6",
     "react-native-swipeout": "^2.3.6",
     "react-native-url-preview": "^1.1.9",
