--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-document-picker": "^4.3.0",
+    "react-native-draggable-flatlist": "^2.5.4",
     "react-native-elements": "^3.1.0",
     "react-native-file-viewer": "^2.1.4",
+    "react-native-gesture-handler": "^1.10.0",
     "react-native-profile-picture": "^1.0.0",
     "react-native-read-sms": "^1.0.6",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-swipeable-item": "^1.5.4",
     "react-native-swipeout": "^2.3.6",
     "react-native-url-preview": "^1.1.9",
     "react-native-web": "~0.13.12",
