--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-elements": "^3.1.0",
     "react-native-file-viewer": "^2.1.4",
     "react-native-gesture-handler": "^1.10.0",
+    "react-native-paper": "^4.7.1",
     "react-native-profile-picture": "^1.0.0",
     "react-native-read-sms": "^1.0.6",
     "react-native-reanimated": "^1.13.2",
@@ -27,6 +28,7 @@
     "react-native-swipeout": "^2.3.6",
     "react-native-url-preview": "^1.1.9",
     "react-native-web": "~0.13.12",
+    "react-router-dom": "^5.2.0",
     "react-router-native": "^5.2.0"
   },
   "devDependencies": {
